Fixed update area on mobile and added meta tags to index.html

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,8 +13,6 @@
 	height: calc(100% - 80px);
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	//grid-template-rows: 1fr 1fr 1fr;
-	//grid-column-gap: 50px;
 	grid-template-areas: "text logo news";
 	@media (max-width: 1300px) {
 		grid-template-columns: 1fr 1fr;
@@ -30,7 +28,6 @@
 			"text"
 			"news";
 		grid-template-rows: 1fr 1fr;
-		//grid-row-gap: 0;
 		height: auto;
 	}
 }
@@ -40,7 +37,6 @@
 	line-height: 0;
 	font-size: 3vw;
 	grid-area: text;
-	//align-self: flex-end;
 	font-family: $fantasy-font;
 	@media (max-width: 1300px) {
 		font-size: calc(3.6vw);
@@ -54,7 +50,6 @@
 	color: white;
 	font-size: 1.3vw;
 	grid-area: text;
-	//align-self: center;
 	@media (max-width: 1300px) {
 		font-size: calc(1.8vw);
 	}
@@ -77,7 +72,6 @@
 
 .home-logo {
 	grid-area: logo;
-	//object-fit: fill;
 	height: 60%;
 	width: 60%;
 	align-self: center;
@@ -128,8 +122,6 @@ a {
 	height: 85%;
 	width: 75%;
 	box-sizing: border-box;
-	// display: table;
-	// background-color: white-transparent(0.2);
 	background-color: $white;
 	padding: 3%;
 	border-radius: 10px;
@@ -139,13 +131,19 @@ a {
 		justify-self: center;
 		margin-right: 0;
 		width: 90%;
+		height: fit-content;
+		margin-bottom: 10%;
 	}
 }
 
 .update-post-group {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
+	height: 100%;
+	justify-content: space-evenly;
+	@media (max-width: 800px) {
+		height: fit-content;
+	}
 }
 
 .update-post {
